--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,9 +7,8 @@ jobs:
     name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
         swift: ["5.2", "5.3", "5.4", "5.5", "5.6"]
-    runs-on: ${{ matrix.os }}
+    runs-on: macos-latest 
     steps:
       - uses: fwal/setup-swift@2040b795e5c453c3a05fcb8316496afc8a74f192
         with:
