--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,13 +4,13 @@ on: [push]
 
 jobs:
   build:
-    name: Swift ${{ matrix.swift }} on ${{ matrix.os }}
+    name: Swift ${{ matrix.swift }}
     strategy:
       matrix:
         swift: ["5.2", "5.3", "5.4", "5.5", "5.6"]
     runs-on: macos-latest 
     steps:
-      - uses: fwal/setup-swift@2040b795e5c453c3a05fcb8316496afc8a74f192
+      - uses: swift-actions/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v3
