--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Swift ${{ matrix.swift }}
     strategy:
       matrix:
-        swift: ["5.2", "5.3", "5.4", "5.5", "5.6"]
+        swift: ["5.4", "5.5", "5.6"]
     runs-on: macos-latest 
     steps:
       - uses: swift-actions/setup-swift@v1
