--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,7 +7,7 @@ jobs:
     name: Swift ${{ matrix.swift }}
     strategy:
       matrix:
-        swift: ["5.4", "5.5", "5.6"]
+        swift: ["5.6"]
     runs-on: macos-latest 
     steps:
       - uses: swift-actions/setup-swift@v1
@@ -15,6 +15,6 @@ jobs:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v3
       - name: Build
-        run: swift build
+        run: swift build -v
       - name: Run tests
-        run: swift test
+        run: swift test -c release -Xswiftc -enable-testing
