--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         swift: ["5.3", "5.4", "5.5", "5.6"]
+      fail-fast: false
     runs-on: macos-latest 
     steps:
       - uses: swift-actions/setup-swift@v1
