--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,11 +7,11 @@ jobs:
     name: Swift ${{ matrix.swift }}
     strategy:
       matrix:
-        swift: ["5.3", "5.4", "5.5", "5.6"]
+        swift: ["5.5", "5.6"]
       fail-fast: false
     runs-on: macos-latest 
     steps:
-      - uses: fwal/setup-swift@2040b795e5c453c3a05fcb8316496afc8a74f192
+      - uses: swift-actions/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift }}
       - uses: actions/checkout@v3
