--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         swift: ["5.5", "5.6"]
       fail-fast: false
-    runs-on: macos-latest 
+    runs-on: macos-11 
     steps:
       - uses: swift-actions/setup-swift@v1
         with:
